force-app/main/default/objects/ContentVersion/fields/b3d__Category__c.field-meta.xml
<CustomField>
    <fullName>b3d__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>b3d__Class__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>b3d__File_Category</valueSetName>
    </valueSet>
</CustomField>