force-app/main/default/objects/ContentVersion/fields/b3d__Class__c.field-meta.xml
<CustomField>
    <fullName>b3d__Class__c</fullName>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>b3d__File_Class</valueSetName>
    </valueSet>
</CustomField>