force-app/main/default/objects/ContentVersion/fields/b3d__Date_Issued__c.field-meta.xml
<CustomField>
    <fullName>b3d__Date_Issued__c</fullName>
    <label>Date Issued</label>
    <type>Date</type>
</CustomField>