force-app/main/default/objects/ContentVersion/fields/b3d__Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>b3d__Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>