force-app/main/default/objects/ContentVersion/fields/b3d__Revision_Reason__c.field-meta.xml
<CustomField>
    <fullName>b3d__Revision_Reason__c</fullName>
    <label>Revision Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>