force-app/main/default/objects/ContentVersion/fields/b3d__Subcategory__c.field-meta.xml
<CustomField>
    <fullName>b3d__Subcategory__c</fullName>
    <label>Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>b3d__Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>b3d__File_Subcategory</valueSetName>
    </valueSet>
</CustomField>