force-app/main/default/objects/ContentVersion/fields/TR1__Contact__c.field-meta.xml
<CustomField>
    <fullName>TR1__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Content</relationshipLabel>
    <relationshipName>Content</relationshipName>
    <type>Lookup</type>
</CustomField>