force-app/main/default/objects/ContentVersion/fields/TR1__Daxtra_Parsing_Status__c.field-meta.xml
<CustomField>
    <fullName>TR1__Daxtra_Parsing_Status__c</fullName>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>