force-app/main/default/objects/ContentVersion/fields/TR1__Interview_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>TR1__Interview_Expiration_Date__c</fullName>
    <description>If the Content Version is linked with a &apos;Send Out Schedule V2&apos; record, it stores the value of the &apos;Interview Date &amp; Time&apos; of that record. This field may be utilized in the logic of deleting ICS files.</description>
    <inlineHelpText>If the Content Version is linked with a &apos;Send Out Schedule V2&apos; record, it stores the value of the &apos;Interview Date &amp; Time&apos; of that record. This field may be utilized in the logic of deleting ICS files.</inlineHelpText>
    <label>Interview Expiration Date</label>
    <type>DateTime</type>
</CustomField>