force-app/main/default/objects/ContentVersion/fields/TR1__Is_Internal_Error__c.field-meta.xml
<CustomField>
    <fullName>TR1__Is_Internal_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The field is used for mass processing flow and is checked when internal validation is failed(eg file size, file extension)</inlineHelpText>
    <label>Is Internal Error</label>
    <type>Checkbox</type>
</CustomField>