force-app/main/default/objects/ContentVersion/fields/TR1__isUploadPending__c.field-meta.xml
<CustomField>
    <fullName>TR1__isUploadPending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload Pending</label>
    <type>Checkbox</type>
</CustomField>