force-app/main/default/objects/ContentVersion/fields/TR1__Monitor_Bulk_Job__c.field-meta.xml
<CustomField>
    <fullName>TR1__Monitor_Bulk_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Monitor Bulk Job</label>
    <referenceTo>TR1__Monitor_Bulk_Job__c</referenceTo>
    <relationshipLabel>Content Versions</relationshipLabel>
    <relationshipName>Content_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>