force-app/main/default/objects/ContentVersion/fields/TR1__Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>TR1__Processing_Status__c</fullName>
    <label>Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>