force-app/main/default/objects/ContentVersion/fields/TR1__Related_Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>TR1__Related_Attachment_Id__c</fullName>
    <description>Holds the attachment id with same file.</description>
    <label>Related Attachment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>